--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,11 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  #
+  # PRUEBAS ENTORNO LOCAL
+  # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  #
+  # PRODUCCIÓN
+  url: <%= ENV.fetch("REDISCLOUD_URL") { "redis://localhost:6379/1" } %>
+  #
   channel_prefix: lingua_mentor_production
