--- a/config/cable.yml
+++ b/config/cable.yml
@@ -8,9 +8,9 @@ production:
   adapter: redis
   #
   # PRUEBAS ENTORNO LOCAL
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  # url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   #
   # PRODUCCIÓN
-  # url: <%= ENV.fetch("REDISCLOUD_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDISCLOUD_URL") { "redis://localhost:6379/1" } %>
   #
   channel_prefix: lingua_mentor_production
